--- a/ProjectG4.json
+++ b/ProjectG4.json
@@ -10,7 +10,7 @@
     ]
   },
   "data": {
-    "url": "https://raw.githubusercontent.com/JaydenLaw87/JaydenLaw87.github.io/main/FlowGroup.json"
+    "url": "https://raw.githubusercontent.com/JaydenLaw87/JaydenLaw87.github.io/main/ScatterGroup.json"
   },
   "height": 250,
   "width": 300,
